--- a/.github/rust-release-linux.yml
+++ b/.github/rust-release-linux.yml
@@ -1,9 +1,10 @@
 # Creates a new release on a new tag
 name: Linux Release on new Tag
-description: Automatically creates a new release when a new commit is pushed to the release branch
 
 on:
   push:
+    branches:
+      - "release"
     tags:
      - '*'
     
@@ -11,3 +12,33 @@ jobs:
 
   build:
     
+    runs-on: ubuntu-latest 
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build Release
+        run: cargo build --release --verbose --target-dir ./release
+      - name: Cache Release File
+        uses: actions/upload-artifact@v3
+        with:
+          name: release
+          path: release/release/${{ github.event.repository.name }}
+
+  publish:
+    needs: build
+
+    runs-on: ubuntu-latest
+
+    permissions:
+      contents: write
+
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/download-artifact@v3
+        with:
+          name: release
+          path: release/
+      - uses: ncipollo/release-action@v1
+        with:
+          bodyFile: "body.md"
+          artifacts: "release/${{ github.event.repository.name }}"
