--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
     "yaml.schemas": {
-        "https://json.schemastore.org/github-action.json": "file:///mnt/HDD-Storage/GitHub/actions/.github/rust-release-linux.yml"
+        "https://json.schemastore.org/github-workflow.json": "file:///mnt/HDD-Storage/GitHub/actions/.github/rust-release-linux.yml"
     }
 }
